--- a/timeline.html
+++ b/timeline.html
@@ -31,7 +31,7 @@
 		  width: 10px;
 		  height: 10px;
 		  background: white;
-		  border: 5px solid #ff005a;
+		  border: 5px solid #007fff;
 		  border-radius: 50%;
 		  display: block;
 		  position: absolute;
@@ -40,15 +40,15 @@
 		body {
       margin: 0;
       padding: 0;
-  background: #070620;
-  color: #007fff;
-  text-align: center;
-  font-family: 'Determination';
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start; /* instead of center */
-  align-items: center;
+      background: #070620;
+      color: #007fff;
+      text-align: center;
+      font-family: 'Determination';
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start; /* instead of center */
+      align-items: center;
 }
 
 		
@@ -66,7 +66,7 @@
 		  list-style: none;
 		  padding-left: 30px;
 		  width: 300px;
-		  border-left: 8px solid #007fff;
+		  border-left: 8px solid #2924bc;
 		  margin: 0 auto;
 		  margin-top: 20px;
       margin-top: 0;
@@ -131,7 +131,7 @@
 		}
 		
 		.radio:checked + .relative .circle {
-		  background: #ff005a;
+		  background: #007fff;
 		}
 		
 		.radio:checked ~ .content {
