--- a/timeline.html
+++ b/timeline.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<link rel="icon" type="image/png" href="Firebolt62.png">
+	<link rel="icon" type="image/png" href="media/Firebolt62.png">
     <title>UNDERTALE</title>
 </head>
 <meta charset="UTF-8">
