--- a/info.html
+++ b/info.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-		<link rel="icon" type="image/png" href="Firebolt62.png">
+		<link rel="icon" type="image/png" href="media/Firebolt62.png">
     	<title>UNDERTALE</title>
 	</head>
     <style>
@@ -169,6 +169,7 @@
 
     </body>
 </html>
+
 
 
 
