--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<link rel="icon" type="image/png" href="Firebolt62.png">
+		<link rel="icon" type="image/png" href="media/Firebolt62.png">
     	<title>UNDERTALE</title>
 	</head>
 
@@ -87,11 +87,12 @@
 			<p>&nbsp
 		<h3 style="text-align: centre">
 		<audio controls loop>
-  			<source src="undertaleTitle.mp3" type="audio/mpeg">
+  			<source src="media/undertaleTitle.mp3" type="audio/mpeg">
  			Your browser does not support the audio element.
 		</audio>
 	</body>
 </html>
+
 
 
 
