--- a/fanbase.html
+++ b/fanbase.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-		<link rel="icon" type="image/png" href="Firebolt62.png">
+		<link rel="icon" type="image/png" href="media/Firebolt62.png">
     	<title>UNDERTALE</title>
 	</head>
     <style>
@@ -162,7 +162,7 @@
 		You can listen to one of the most popular ones here (Censored by us):
 	</p>
 	<video width="320" height="240" controls>
-  		<source src="1110.mp4" type="video/mp4">
+  		<source src="media/asgore.mp4" type="video/mp4">
 	Your browser does not support the video tag.
 	</video>
     <h2>Undertale mods</h2>
@@ -182,3 +182,4 @@
     </ul>
   </body>
 </html>
+
