--- a/copyright.html
+++ b/copyright.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<link rel="icon" type="image/png" href="Firebolt62.png">
+		<link rel="icon" type="image/png" href="media/Firebolt62.png">
     	<title>UNDERTALE</title>
 	</head>
   <style>
@@ -150,6 +150,7 @@
     </p>
   </body>
 </html>
+
 
 
 
